- Removed argparse and hamcrest. Argparse is now replaced with my own command-line parser. Hamcrest is replaced with AssertJ
Signed-off-by: Gerard Fernandes <gerard.fernandes@gmail.com>