@@ -10,8 +10,7 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.NoSuchElementException;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.*;
+import static org.assertj.core.api.Assertions.assertThat;
 
 /**
  * Source code licensed under the GNU GPL v3.0 or later. *
@@ -21,46 +20,46 @@ class CircularBufferTest {
   @Test
   void ensureCircularBehavior() {
     CircularBuffer<String> boundedCircularArray = new CircularBuffer<>(5);
-    assertThat(boundedCircularArray.size(), is(equalTo(0)));
+    assertThat(boundedCircularArray.size()).isEqualTo(0);;
     boundedCircularArray.add("1");
-    assertThat(boundedCircularArray.size(), is(equalTo(1)));
-    assertThat(boundedCircularArray.get(0), is(equalTo("1")));
-    assertThat(boundedCircularArray, contains("1"));
+    assertThat(boundedCircularArray.size()).isEqualTo(1);;
+    assertThat(boundedCircularArray.get(0)).isEqualTo("1");;
+    assertThat(boundedCircularArray).contains("1");
     boundedCircularArray.add("2");
-    assertThat(boundedCircularArray.size(), is(equalTo(2)));
-    assertThat(boundedCircularArray.get(1), is(equalTo("2")));
-    assertThat(boundedCircularArray, contains("1", "2"));
+    assertThat(boundedCircularArray.size()).isEqualTo(2);;
+    assertThat(boundedCircularArray.get(1)).isEqualTo("2");;
+    assertThat(boundedCircularArray).contains("1", "2");
     boundedCircularArray.add("3");
-    assertThat(boundedCircularArray.size(), is(equalTo(3)));
-    assertThat(boundedCircularArray.get(2), is(equalTo("3")));
-    assertThat(boundedCircularArray, contains("1", "2", "3"));
+    assertThat(boundedCircularArray.size()).isEqualTo(3);;
+    assertThat(boundedCircularArray.get(2)).isEqualTo("3");;
+    assertThat(boundedCircularArray).contains("1", "2", "3");
     boundedCircularArray.add("4");
-    assertThat(boundedCircularArray.size(), is(equalTo(4)));
-    assertThat(boundedCircularArray.get(3), is(equalTo("4")));
-    assertThat(boundedCircularArray, contains("1", "2", "3", "4"));
+    assertThat(boundedCircularArray.size()).isEqualTo(4);;
+    assertThat(boundedCircularArray.get(3)).isEqualTo("4");;
+    assertThat(boundedCircularArray).contains("1", "2", "3", "4");
     boundedCircularArray.add("5");
-    assertThat(boundedCircularArray.size(), is(equalTo(5)));
-    assertThat(boundedCircularArray.get(4), is(equalTo("5")));
-    assertThat(boundedCircularArray, contains("1", "2", "3", "4", "5"));
+    assertThat(boundedCircularArray.size()).isEqualTo(5);;
+    assertThat(boundedCircularArray.get(4)).isEqualTo("5");;
+    assertThat(boundedCircularArray).contains("1", "2", "3", "4", "5");
     boundedCircularArray.add("6");
-    assertThat(boundedCircularArray.size(), is(equalTo(5)));
-    assertThat(boundedCircularArray.get(0), is(equalTo("6")));
-    assertThat(boundedCircularArray, contains("2", "3", "4", "5", "6"));
+    assertThat(boundedCircularArray.size()).isEqualTo(5);;
+    assertThat(boundedCircularArray.getFirst()).isEqualTo("6");;
+    assertThat(boundedCircularArray).contains("2", "3", "4", "5", "6");
     boundedCircularArray.add("7");
-    assertThat(boundedCircularArray.size(), is(equalTo(5)));
-    assertThat(boundedCircularArray.get(0), is(equalTo("6")));
-    assertThat(boundedCircularArray.get(1), is(equalTo("7")));
-    assertThat(boundedCircularArray.getLast(), is(equalTo("7")));
-    assertThat(boundedCircularArray, contains("3", "4", "5", "6", "7"));
+    assertThat(boundedCircularArray.size()).isEqualTo(5);;
+    assertThat(boundedCircularArray.getFirst()).isEqualTo("6");;
+    assertThat(boundedCircularArray.get(1)).isEqualTo("7");;
+    assertThat(boundedCircularArray.getLast()).isEqualTo("7");;
+    assertThat(boundedCircularArray).contains("3", "4", "5", "6", "7");
   }
 
   @Test
   void ensureInvalidIndicesAreHandledCorrectly() {
     CircularBuffer<String> boundedCircularArray = new CircularBuffer<>(1);
-    assertThat(boundedCircularArray.size(), is(equalTo(0)));
+    assertThat(boundedCircularArray.size()).isEqualTo(0);;
     boundedCircularArray.add("1");
-    assertThat(boundedCircularArray.size(), is(equalTo(1)));
-    assertThat(boundedCircularArray.get(0), is(equalTo("1")));
+    assertThat(boundedCircularArray.size()).isEqualTo(1);;
+    assertThat(boundedCircularArray.get(0)).isEqualTo("1");;
     IndexOutOfBoundsException indexOutOfBoundsException = Assertions.assertThrows(IndexOutOfBoundsException.class, () -> boundedCircularArray.get(1));
   }
 
@@ -83,7 +82,7 @@ class CircularBufferTest {
       //expected
     }
     iterator = boundedCircularArray.iterator();
-    assertThat(iterator.next(), is("1"));
+    assertThat(iterator.next()).isEqualTo("1");
     boundedCircularArray.add("2");
     try {
       iterator.next();
@@ -96,8 +95,8 @@ class CircularBufferTest {
   @Test
   public void ensureLastItemCorrectlyReturned() {
     CircularBuffer<String> boundedCircularArray = new CircularBuffer<>(3);
-    assertThat(boundedCircularArray.size(), is(0));
-    assertThat(boundedCircularArray.getLastInsertIndex(), is(equalTo(-1)));
+    assertThat(boundedCircularArray.size()).isEqualTo(0);
+    assertThat(boundedCircularArray.getLastInsertIndex()).isEqualTo(-1);;
     try {
       boundedCircularArray.getLast();
       assert false : "Should have thrown an exception!";
@@ -105,29 +104,29 @@ class CircularBufferTest {
       //expected
     }
     boundedCircularArray.add("1");
-    assertThat(boundedCircularArray.size(), is(1));
-    assertThat(boundedCircularArray.get(0), is("1"));
-    assertThat(boundedCircularArray.getLast(), is("1"));
+    assertThat(boundedCircularArray.size()).isEqualTo(1);
+    assertThat(boundedCircularArray.get(0)).isEqualTo("1");
+    assertThat(boundedCircularArray.getLast()).isEqualTo("1");
     boundedCircularArray.add("2");
-    assertThat(boundedCircularArray.size(), is(2));
-    assertThat(boundedCircularArray, contains("1", "2"));
-    assertThat(boundedCircularArray.getLast(), is("2"));
+    assertThat(boundedCircularArray.size()).isEqualTo(2);
+    assertThat(boundedCircularArray).contains("1", "2");
+    assertThat(boundedCircularArray.getLast()).isEqualTo("2");
     boundedCircularArray.add("3");
-    assertThat(boundedCircularArray.size(), is(3));
-    assertThat(boundedCircularArray.getLast(), is("3"));
-    assertThat(boundedCircularArray, contains("1", "2", "3"));
+    assertThat(boundedCircularArray.size()).isEqualTo(3);
+    assertThat(boundedCircularArray.getLast()).isEqualTo("3");
+    assertThat(boundedCircularArray).contains("1", "2", "3");
     boundedCircularArray.add("4");
-    assertThat(boundedCircularArray.size(), is(3));
-    assertThat(boundedCircularArray, contains("2", "3", "4"));
-    assertThat(boundedCircularArray.getLast(), is("4"));
+    assertThat(boundedCircularArray.size()).isEqualTo(3);
+    assertThat(boundedCircularArray).contains("2", "3", "4");
+    assertThat(boundedCircularArray.getLast()).isEqualTo("4");
     boundedCircularArray.add("5");
-    assertThat(boundedCircularArray.size(), is(3));
-    assertThat(boundedCircularArray, contains("3", "4", "5"));
-    assertThat(boundedCircularArray.getLast(), is("5"));
+    assertThat(boundedCircularArray.size()).isEqualTo(3);
+    assertThat(boundedCircularArray).contains("3", "4", "5");
+    assertThat(boundedCircularArray.getLast()).isEqualTo("5");
     boundedCircularArray.add("6");
-    assertThat(boundedCircularArray.size(), is(3));
-    assertThat(boundedCircularArray, contains("4", "5", "6"));
-    assertThat(boundedCircularArray.getLast(), is("6"));
+    assertThat(boundedCircularArray.size()).isEqualTo(3);
+    assertThat(boundedCircularArray).contains("4", "5", "6");
+    assertThat(boundedCircularArray.getLast()).isEqualTo("6");
   }
 
   @Test
@@ -137,12 +136,12 @@ class CircularBufferTest {
     boundedCircularArray.add("1");
     boundedCircularArray.add("2");
     boundedCircularArray.add("3");
-    assertThat(boundedCircularArray.size(), is(3));
-    assertThat(boundedCircularArray, contains("1", "2", "3"));
+    assertThat(boundedCircularArray.size()).isEqualTo(3);
+    assertThat(boundedCircularArray).contains("1", "2", "3");
     boundedCircularArray.add("4");
     boundedCircularArray.add("5");
     //default iterator should be FIFO ordered
-    assertThat(boundedCircularArray, contains("3", "4", "5"));
+    assertThat(boundedCircularArray).contains("3", "4", "5");
     final List<String> expectedList = Arrays.asList("4", "5", "3");
     //normal order of iteration should be a[0], a[1]...a[n]
     System.out.println("Natural ordering:");
@@ -153,10 +152,9 @@ class CircularBufferTest {
     int i = 0;
     while (iterator.hasNext()) {
       String next = iterator.next();
-      assertThat("Expected item[" + i + "]: " + expectedList.get(i) + ", but was: " + next,
-          next, is(expectedList.get(i)));
+      assertThat(next).isEqualTo(expectedList.get(i));
       i++;
-      assertThat(i, lessThanOrEqualTo(expectedList.size()));
+      assertThat(i).isLessThanOrEqualTo(expectedList.size());
     }
   }
 
